# IMessage

./: LICENSE  README.md
config/: msggateway.yaml  mysql.yml  userservice.yaml
config/log/: imserver-msggateway.properties  imserver-userservice.properties
docs/: README.md  msg_gateway.md
docs/function/: init.md
docs/storage/: README.md
example/: CMakeLists.txt  login.cpp
protocol/user/: auth.grpc.pb.cc  auth.grpc.pb.h  auth.pb.cc  auth.pb.h  auth.proto
server/: CMakeLists.txt
server/common/: CMakeLists.txt  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  Exception.h  Logger.cpp  Logger.h  Message.cpp  Message.h  Returncode.h  util.cpp  util.h
server/msg_gateway/: CMakeLists.txt  Client.cpp  Client.h  ConnServer.cpp  ConnServer.h  LongServer.cpp  LongServer.h  MsgGateWayConfig.h  MsgGatewayServer.cpp  MsgGatewayServer.h  MsgGatewayUtil.h  Session.cpp  Session.h  main.cpp  server.h
server/msggateway/: CMakeLists.txt  Client.cpp  Client.h  ConnServer.cpp  ConnServer.h  MsgGateWayConfig.h  MsgGatewayServer.cpp  MsgGatewayServer.h  MsgGatewayUtil.h  Session.cpp  Session.h  TCPServer.h  TCPSession.cpp  TCPSession.h  WebSession.cpp  WebSession.h  WebSocketServer.h  main.cpp
server/rpc/: CMakeLists.txt
server/rpc/auth/: auth.grpc.pb.h  auth.pb.cc  auth.pb.h
server/service_lib/user/: AuthClient.cpp  AuthClient.h  CMakeLists.txt  UserClient.cpp  UserClient.h  UserConfig.h
server/services/client/: CMakeLists.txt  ClientManager.cpp  ClientManager.h  UserClient.cpp  UserClient.h
server/services/user/: AuthServiceImpl.cpp  AuthServiceImpl.h  CMakeLists.txt  ServiceImpl.cpp  ServiceImpl.h  UserServiceConfig.h  UserServiceUtil.h  main.cpp
server/src/network/: CMakeLists.txt
server/src/service/: CMakeLists.txt  IMService.cpp
server/storage/: CMakeLists.txt
server/storage/cache/: UserCache.cpp  UserCache.h
server/storage/controller/: DBConnPool.cpp  DBConnPool.h  UserDatabase.cpp  UserDatabase.h
server/storage/model/: UserInfo.h
server/user_service/: AuthServiceImpl.cpp  AuthServiceImpl.h  CMakeLists.txt  CallData.h  ServiceImpl.cpp  ServiceImpl.h  UserServiceConfig.h  main.cpp
